# cali-moba

./: .gitignore  README.md
cali-application/sudoku/battle/: Cargo.toml
cali-application/sudoku/battle/src/: lib.rs
contracts/: Cargo.toml  build.sh  dfx.json
contracts/candid/: sudoku.did  verifier.did
contracts/sudoku/: Cargo.toml
contracts/sudoku/src/: contract.rs  error.rs  game.rs  lib.rs  logic.rs  state.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: contract.rs  error.rs  groth16.rs  lib.rs  types.rs  utils.rs
contracts/verifier/src/bn254/: final_exp.rs  miller_loop.rs  mod.rs  my_fq12.rs  pairing.rs
frontend/: .env.example  environment.d.ts  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/api/: calimeroService.ts  gameAPI.ts  httpService.ts
frontend/api/calimero-admin/: calimeroAdminAPI.ts  index.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/new-battle/: page.tsx
frontend/app/new-room/: page.tsx
frontend/auth/: headers.ts
frontend/components/common/: BattleStatusTag.tsx  HiddenCopyableText.tsx  SwishSpinner.tsx
frontend/components/home/: BattleCard.tsx  RoomCard.tsx
frontend/components/layout/: Header.tsx
frontend/components/provider/: ICWalletProvider.tsx
frontend/components/sudoku/: Game.tsx
frontend/styles/: font.ts  theme.ts
frontend/types/: battle.ts  game.ts  room.ts
frontend/utils/: chain.ts  node.ts  storage.ts
frontend/utils/chain/: icp_ledger_canister.did.ts  index.ts
games/sudoku/: Cargo.toml
games/sudoku/elf/: riscv32im-succinct-zkvm-elf  verifying_key_hex
games/sudoku/src/: main.rs
server/: .env.example  Cargo.toml
server/src/: main.rs
server/src/api/v1/: app_state.rs  errors.rs  mod.rs
server/src/api/v1/controllers/games/: game_info.rs  generate_proof.rs  join_battle.rs  join_room.rs  mod.rs  new_battle.rs  new_room.rs  service_fee.rs  start_game.rs
server/src/api/v1/controllers/games/battle/: battle_info.rs  join_battle.rs  mod.rs  submit_solution.rs
server/src/api/v1/controllers/games/team/: invite_to_team.rs  mod.rs  new.rs
server/src/api/v1/routes/: all_routes.rs  mod.rs
server/src/api/v1/routes/games/: battle.rs  join_battle.rs  join_room.rs  mod.rs  new_battle.rs  new_room.rs  service_fee.rs  start_game.rs  team.rs
server/src/api/v1/utils/: calimero_cli.rs  ic_caller.rs  mod.rs
server/src/config/: env_config.rs  mod.rs
server/src/games/: sudoku.rs
(+11 files in other folders)
