[workspace]
members = ["verifier", "sudoku"]
resolver = "2"

[workspace.dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
thiserror = "2.0.6"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
ark-bn254 = "0.4.0"
ark-ff = { version = "0.4.2" }
ark-std = "0.4.0"
itertools = "0.10.5"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
hex = { version = "0.4.3", features = ["serde"] }
verifier = { path = "verifier", features = ["library"] }
icrc-ledger-types = "0.1.8"
pocket-ic = "6.0.0"

serde_json = "1.0.135"

