[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
sp1-sdk = { version = "3.0.0" }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde_json = "1.0.135"
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "1.0.69"
hex = "0.4.3"
tower-http = { version = "0.6.2", features = ["cors"]}
ic-utils = "0.39.3"
ic-agent = "0.39.3"
sudoku = { path = "../contracts/sudoku" }

[dev-dependencies]
ethers = "2.0.14"