[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
ic-cdk = { workspace = true }
candid = { workspace = true }
thiserror = { workspace = true }
verifier = { workspace = true }
serde = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }

[dev-dependencies]
pocket-ic = { workspace = true }